Modified error handling and artists validation
